[gd_scene load_steps=5 format=3 uid="uid://b1wv6rki2etlf"]

[ext_resource type="Script" path="res://scenes/ui/toast_notifications/item_toast_ui/item_toast_ui.gd" id="1_n0x71"]
[ext_resource type="Theme" uid="uid://d3hq7cut50woy" path="res://resources/config/ui/ui_theme.tres" id="2_0imgf"]
[ext_resource type="Texture2D" uid="uid://w4qtqvcafkc8" path="res://resources/textures/harvestables/wood.tres" id="3_m25nt"]
[ext_resource type="PackedScene" uid="uid://dvbgoolljwwwp" path="res://scenes/ui/general/bouncing_count_label/bouncing_count_label.tscn" id="4_bbsev"]

[node name="ItemToastUI" type="Control"]
custom_minimum_size = Vector2(500, 65)
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 65.0
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource("1_n0x71")
fadeout_start_time_sec = 1.5

[node name="NameContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 55)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -27.5
offset_right = -45.0
offset_bottom = 27.5
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("2_0imgf")
theme_type_variation = &"ToastPanelContainer"

[node name="MarginContainer" type="MarginContainer" parent="NameContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 45

[node name="NameLabel" type="Label" parent="NameContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "N"
horizontal_alignment = 2

[node name="TexturePanel" type="Panel" parent="."]
custom_minimum_size = Vector2(65, 65)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -32.5
offset_right = -10.0
offset_bottom = 32.5
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("2_0imgf")
theme_type_variation = &"ToastPanel"

[node name="MarginContainer" type="MarginContainer" parent="TexturePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TextureRect" type="TextureRect" parent="TexturePanel/MarginContainer"]
layout_mode = 2
texture = ExtResource("3_m25nt")

[node name="BouncingCountLabel" parent="TexturePanel" instance=ExtResource("4_bbsev")]
layout_mode = 1
offset_left = -50.0
offset_right = -10.0

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
